ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookie-ingress
  namespace: bookie-app
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - dev.baraziza.online
    secretName: bookie-tls
  rules:
    - host: dev.baraziza.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bookie-service
                port:
                  number: 80
